--- a/rootdir/init.mt6752.rc
+++ b/rootdir/init.mt6752.rc
@@ -32,8 +32,6 @@ on init
 
     mkdir /mnt/cd-rom 0000 system system
 
-    #Lenovo,EasyImage
-    mkdir /preload 0771 system system
 # Change ION driver permission
     chmod 0666 /dev/ion
 
@@ -62,9 +60,7 @@ on fs
     exec /system/bin/tune2fs -O has_journal -u 10010 -r 4096 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/userdata
     write /proc/bootprof "INIT:Mount_END"
 
-on fs
-
-   mount iso9660 loop@/system/etc/iAmCdRom.iso /mnt/cd-rom ro
+    mount iso9660 loop@/system/etc/iAmCdRom.iso /mnt/cd-rom ro
 
 on post-fs
     # Support legacy paths
@@ -253,7 +249,7 @@ on post-fs-data
     chown system system /sys/class/misc/m_batch_misc/batchbatch
     chown system system /sys/class/misc/m_batch_misc/batchflush
 
-	chmod 0660 /sys/class/misc/m_gyro_misc/gyroenablenodata
+    chmod 0660 /sys/class/misc/m_gyro_misc/gyroenablenodata
     chmod 0660 /sys/class/misc/m_gyro_misc/gyroactive
     chmod 0660 /sys/class/misc/m_gyro_misc/gyrodelay
     chmod 0660 /sys/class/misc/m_gyro_misc/gyrobatch
@@ -421,7 +417,7 @@ on post-fs-data
     chown radio system /sys/devices/platform/mt-pmic/low_battery_protect_ut
 
     mkdir /data/amit/ 0770 system system
-		mkdir /data/misc/sensor 0774 system system
+    mkdir /data/misc/sensor 0774 system system
     mkdir /data/misc/akmd 0770 system system
     mkdir /data/misc/s62x 0771 compass compass
     mkdir /data/acdapi/ 0770 system system
@@ -433,7 +429,7 @@ on post-fs-data
     chown system /sys/devices/platform/msensor/driver/cpsreptz
     chown system /sys/devices/platform/gsensor/driver/cpsopmode
     chown system /sys/devices/platform/gsensor/driver/cpsrange
-    mkdir	/data/data/mcube 0664 system system
+    mkdir /data/data/mcube 0664 system system
 
     chown system /sys/class/input/input1/enable
     chown system /sys/class/input/input1/delay
@@ -578,17 +574,11 @@ on post-fs-data
     chmod 0660 /dev/kd_camera_flashlight
     chmod 0660 /dev/kd_camera_hw_bus2
     chmod 0660 /dev/FM50AF
-    chmod 0660 /dev/DW9718AF
     chmod 0660 /dev/CAM_CAL_DRV
-    chmod 0660 /dev/HI551_CAM_CAL_DRV
     #lenovo.sw START wangsx3 20140814 add AF for AIO
     chmod 0660 /dev/DW9761OFILMA50AF
-    chmod 0660 /dev/DW9761OFILMAF
     chmod 0660 /dev/DW9761SUNNYAF
     #lenovo.sw END wangsx3 20140814  add AF for AIO
-    #lenovo.sw START add AF for AIO_ROW
-    chmod 0660 /dev/DW9718AF
-    #lenovo.sw END add AF for AIO_ROW
 
     chown system camera /dev/camera-sysram
     chown system camera /dev/camera-isp
@@ -598,17 +588,11 @@ on post-fs-data
     chown system camera /dev/kd_camera_flashlight
     chown system camera /dev/kd_camera_hw_bus2
     chown system camera /dev/FM50AF
-    chown system camera /dev/DW9718AF
     chown system camera /dev/CAM_CAL_DRV
-    chown system camera /dev/HI551_CAM_CAL_DRV
     #lenovo.sw START wangsx3 20140814 add AF for AIO
-    chown system camera /dev/DW9761OFILMAF
     chown system camera /dev/DW9761OFILMA50AF
     chown system camera /dev/DW9761SUNNYAF
     #lenovo.sw END wangsx3 20140814  add AF for AIO
-    #lenovo.sw START add AF for AIO_ROW
-    chown system camera /dev/DW9718AF
-    #lenovo.sw END add AF for AIO_ROW
 
     #MATV
     chmod 0660 /dev/MATV
@@ -622,10 +606,6 @@ on post-fs-data
     chmod 0660 /dev/mt-mdp
     chown system media /dev/mt-mdp
 
-    # G2D
-    chmod 0660 /dev/mtkg2d
-    chown system media /dev/mtkg2d
-
     # SMI
     chmod 0660 /dev/MTK_SMI
     chown media media /dev/MTK_SMI
@@ -633,7 +613,7 @@ on post-fs-data
     #for eng mode
     chmod 0664 /dev/misc-sd
 
-   #change partition permission
+    #change partition permission
 
     chmod 0640 /mtd@sec_ro
     chown root system /mtd@sec_ro
@@ -711,8 +691,8 @@ on post-fs-data
     # Recycle stuffs
     exec /system/bin/rm -f /cache/.ipoh.img
 
-	#Thermal	
-	mkdir /data/.tp/ 0775 system system
+    #Thermal	
+    mkdir /data/.tp/ 0775 system system
 
     #create directory /data/subt for subtitle
     mkdir /mnt/subt/ 0770 media media
@@ -722,7 +702,14 @@ on post-fs-data
 
 on boot
 
+    # xlog
+    #start xlogboot
+
     write /proc/sys/vm/dirty_writeback_centisecs 300
+# lenovo-sw jiayh2 , modi vm emmc for ALPS02033794 start
+    write /proc/sys/vm/dirty_background_ratio 3
+    write /proc/sys/vm/dirty_ratio 10
+# lenovo-sw jiayh2 , modi vm emmc for ALPS02033794 end
     chmod 0660 /sys/power/autosleep
 
     chmod 0664 /sys/class/leds/lcd-backlight/brightness
@@ -754,12 +741,6 @@ on boot
     chown root   radio  /sys/class/leds/lcd-backlight/duty
     chown root   radio  /sys/class/leds/lcd-backlight/div
     chown system system /sys/class/leds/lcd-backlight/trigger
-    chown system system /sys/class/leds/button-backlight/trigger
-    chown system system /sys/class/leds/keyboard-backlight/trigger
-    chown system system /sys/class/leds/jogball-backlight/trigger
-    chown system system /sys/class/leds/red/trigger
-    chown system system /sys/class/leds/green/trigger
-    chown system system /sys/class/leds/blue/trigger
 
     # Permission for hibernation
     chown radio system /sys/power/tuxonice
@@ -786,7 +767,7 @@ on boot
     chmod 0660 /proc/cpufreq/cpufreq_limited_max_freq_by_user
 
 ##Netlog tool
-   #change permissions about terminal
+    #change permissions about terminal
     chown root radio /proc/net/vlan/config
     chmod 0640 /proc/net/vlan/config
     chown root radio /proc/net/ip6_tables_matches
@@ -823,33 +804,6 @@ on boot
     chmod 0660 /dev/ttyGS3
     chown system radio /dev/ttyGS3
 
-on property:vold.decrypt=trigger_reset_main
-    start stop_modem
-
-on property:vold.decrypt=trigger_restart_min_framework
-    start start_modem
-    start msensord
-    start permission_check
-
-on property:vold.decrypt=trigger_restart_framework
-    start nvram_daemon
-    start start_modem
-    start msensord
-    start permission_check
-
-on property:vold.decrypt=trigger_shutdown_framework
-    start stop_modem
-    start swapoff_action
-
-service stop_modem /system/bin/md_ctrl 0
-    class main
-    disabled
-    oneshot
-
-service start_modem /system/bin/md_ctrl 1
-    class main
-    disabled
-    oneshot
 # Define TCP buffer sizes for various networks
 #   ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax,
     setprop net.tcp.buffersize.default 4096,87380,524288,4096,16384,524288
@@ -865,21 +819,49 @@ service start_modem /system/bin/md_ctrl 1
 
     setprop persist.sys.strictmode.disable 1
 
+on property:vold.decrypt=trigger_reset_main
+    start stop_modem
+
+on property:vold.decrypt=trigger_restart_min_framework
+    start start_modem
+    start msensord
+
+on property:vold.decrypt=trigger_restart_framework
+    start nvram_daemon
+    start start_modem
+    start msensord
+
+on property:vold.decrypt=trigger_shutdown_framework
+    start stop_modem
+    start swapoff_action
+
+service stop_modem /system/bin/md_ctrl 0
+    class main
+    disabled
+    oneshot
+
+service start_modem /system/bin/md_ctrl 1
+    class main
+    disabled
+    oneshot
+
 ## mtk printk uart controller
 on property:persist.uartconsole.enable=1
     write /proc/mtprintk 1
 
 # Update the second boot logo
-service bootlogoupdater /system/bin/boot_logo_updater
-    class core
-    oneshot
+#service bootlogoupdater /system/bin/boot_logo_updater
+#    class core
+#    oneshot
 
 service mobile_log_d /system/bin/mobile_log_d
     class main
+
 # MTK PR_DEBUG SWITCH
 on property:debug.MB.prdebug=1
     write /sys/kernel/debug/dynamic_debug/control "file *mediatek* +p"
     write /sys/kernel/debug/dynamic_debug/control "file *gpu* -p"
+
 on property:debug.MB.prdebug=0
     write /sys/kernel/debug/dynamic_debug/control "file *mediatek* -p"
 
@@ -896,8 +878,6 @@ service bugreport /system/bin/dumpstate -d -p -B \
 
 on property:sys.boot_completed=1
     start gas_srv
-    # xlog
-    start xlogboot
 
 service gas_srv /system/bin/gas_srv
     class core
@@ -909,81 +889,16 @@ service netdiag /system/bin/netdiag
     class main
     socket netdiag stream 0664 root inet
 
-
 service nvram_daemon /system/bin/nvram_daemon
     class main
     user root
     group system
     oneshot
 
-# DFO (Begin)
-service featured /system/bin/featured
-    class core
-    user nvram
-    group system
-    socket dfo stream 660 nvram system
-# DFO (End)
-
-service atci_service /system/bin/atci_service
-    class core
-    socket atci-service stream 660 radio system
-    socket atci-serv-fw stream 660 radio system
-    user root
-    disabled
-    group radio system
-
-service atcid-daemon-u /system/bin/atcid
-    class main
-    socket adb_atci_socket stream 660 radio system
-    user system
-    group radio system media inet wifi net_admin
-    disabled
-    oneshot
-
-service atcid-daemon-e /system/bin/atcid
-    class core
-    socket adb_atci_socket stream 660 radio system
-    user root
-    group radio system
-    disabled
-    oneshot
-
-on property:ro.build.type=eng
-start atci_service
-start atcid-daemon-e
-
-on property:persist.service.atci.autostart=1
-start atci_service
-start atcid-daemon-u
-
-service audio-daemon /system/bin/audiocmdservice_atci
-    class main
-    socket atci-audio stream 660 root system
-    user root
-    disabled
-    oneshot
-
-service md_minilog_util /system/bin/md_minilog_util
-    user root
-    disabled
-    oneshot
-
 service pq /system/bin/pq
     class main
     user system
     group system graphics
-
-service aal /system/bin/aal
-    class main
-    user system
-    group system graphics
-
-# FOTA upgrade
-service rbfota /system/bin/fota1
-    class main
-    disabled
-    oneshot
-
 
 service p2p_supplicant /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
@@ -1018,7 +933,6 @@ service autokd /system/bin/autokd
     class core
     user system
     group system
-
 
 service dhcpcd_bt-pan /system/bin/dhcpcd -BK -dd
     class main
@@ -1087,47 +1001,43 @@ service dhcp6c_PD /system/bin/dhcp6c -c "/etc/wide-dhcpv6/dhcp6cPD.conf" -Df
     disabled
     oneshot
 
-service pppoe_wlan0 /system/bin/launchpppoe
-    user root
-    group radio cache inet misc
-    disabled
-    oneshot
-
-on property:service.pppoe_wlan0.enable=0
-    stop pppoe_wlan0
-
-on property:service.pppoe_wlan0.enable=1
-    start pppoe_wlan0
 # write proc for test sim
-    on property:gsm.sim.ril.testsim=0
+on property:gsm.sim.ril.testsim=0
     write /proc/sys/net/netfilter/nf_conntrack_tcp_no_window_check 0
     write /proc/sys/net/ipv4/tcp_rto_min 200
     write /proc/sys/net/ipv4/tcp_early_retrans 3
-    on property:gsm.sim.ril.testsim=1
+
+on property:gsm.sim.ril.testsim=1
     write /proc/sys/net/netfilter/nf_conntrack_tcp_no_window_check 1
     write /proc/sys/net/ipv4/tcp_rto_min 400
     write /proc/sys/net/ipv4/tcp_early_retrans 0
-    on property:gsm.sim.ril.testsim.2=0
+
+on property:gsm.sim.ril.testsim.2=0
     write /proc/sys/net/netfilter/nf_conntrack_tcp_no_window_check 0
     write /proc/sys/net/ipv4/tcp_rto_min 200
     write /proc/sys/net/ipv4/tcp_early_retrans 3
-    on property:gsm.sim.ril.testsim.2=1
+
+on property:gsm.sim.ril.testsim.2=1
     write /proc/sys/net/netfilter/nf_conntrack_tcp_no_window_check 1
     write /proc/sys/net/ipv4/tcp_rto_min 400
     write /proc/sys/net/ipv4/tcp_early_retrans 0
-    on property:gsm.sim.ril.testsim.3=0
+
+on property:gsm.sim.ril.testsim.3=0
     write /proc/sys/net/netfilter/nf_conntrack_tcp_no_window_check 0
     write /proc/sys/net/ipv4/tcp_rto_min 200
     write /proc/sys/net/ipv4/tcp_early_retrans 3
-    on property:gsm.sim.ril.testsim.3=1
+
+on property:gsm.sim.ril.testsim.3=1
     write /proc/sys/net/netfilter/nf_conntrack_tcp_no_window_check 1
     write /proc/sys/net/ipv4/tcp_rto_min 400
     write /proc/sys/net/ipv4/tcp_early_retrans 0
-    on property:gsm.sim.ril.testsim.4=0
+
+on property:gsm.sim.ril.testsim.4=0
     write /proc/sys/net/netfilter/nf_conntrack_tcp_no_window_check 0
     write /proc/sys/net/ipv4/tcp_rto_min 200
     write /proc/sys/net/ipv4/tcp_early_retrans 3
-    on property:gsm.sim.ril.testsim.4=1
+
+on property:gsm.sim.ril.testsim.4=1
     write /proc/sys/net/netfilter/nf_conntrack_tcp_no_window_check 1
     write /proc/sys/net/ipv4/tcp_rto_min 400
     write /proc/sys/net/ipv4/tcp_early_retrans 0
@@ -1186,30 +1096,6 @@ service bluetoothd /system/bin/bluetoothd -n
 #	user root
 #	group system media
 
-#
-#  External Modme control related services
-#
-
-#
-#  Modem related services (Begin)
-#
-service pppd_gprs /system/bin/pppd_dt /dev/ttyACM0 debug noauth refuse-eap usepeerdns nodetach
-    user root
-    group radio cache inet misc
-    disabled
-    oneshot
-
-##Add by T.Zh for ppp daemon
-#service pppd /system/bin/pppd file /data/misc/ppp/ppp_options
-#    user root
-#    disabled
-#    oneshot
-#
-##
-#
-#  Modem related services (End)
-#
-
 #service agpsdcainit /system/bin/agpscacertinit
 #    class main
 #    oneshot
@@ -1243,16 +1129,6 @@ service ipod /system/bin/ipod
     group root
     disabled
 
-service extmdlogger /system/bin/extmdlogger
-    class main
-    user shell
-    group shell system radio sdcard_rw inet sdcard_r media_rw
-
-service GoogleOtaAgent /system/bin/GoogleOtaBinder
-    class main
-    user root
-    group root
-
 service mdlogger /system/bin/mdlogger
     class main
     user shell
@@ -1261,27 +1137,6 @@ service mdlogger /system/bin/mdlogger
     oneshot
 
 service emdlogger1 /system/bin/emdlogger1
-    class main
-    user shell
-    group system shell radio sdcard_rw inet sdcard_r media_rw
-    disabled
-    oneshot
-
-service emdlogger2 /system/bin/emdlogger2
-    class main
-    user shell
-    group system shell radio sdcard_rw inet sdcard_r media_rw
-    disabled
-    oneshot
-
-service emdlogger5 /system/bin/emdlogger5
-    class main
-    user shell
-    group system shell radio sdcard_rw inet sdcard_r media_rw
-    disabled
-    oneshot
-
-service emdlogger6 /system/bin/emdlogger6
     class main
     user shell
     group system shell radio sdcard_rw inet sdcard_r media_rw
@@ -1330,11 +1185,13 @@ service akmd8963 /system/bin/akmd8963
     group system
     class main
 
-service akmd09911 /system/bin/akmd09911
+#lenovo-sw, shanghai, add by molg1, for msensor, 20141011
+service akmd09911 /system/bin/akmd09911 -p 0
     disabled
     user system
     group system
     class main
+
 service bmm050d /system/bin/bmm050d
     disabled
     user system
@@ -1349,11 +1206,6 @@ service bmm056d /system/bin/bmm056d
 service mc6420d /system/bin/mc6420d
     disabled
     user system
-    group system
-    class main
-service qmc5983d /system/bin/qmc5983d
-     disabled
-	 user system
     group system
     class main
 
@@ -1374,16 +1226,6 @@ service geomagneticd /system/bin/geomagneticd
     group system input
     class main
 
-service mpud6050 /system/bin/mpud6050
-    oneshot
-    user system
-    group system
-
-service mc64xxd /system/bin/mc64xxd
-    disabled
-    user system
-    group system
-    class main
 #
 #sensor service (end)
 #
@@ -1483,18 +1325,6 @@ service guiext-server /system/bin/guiext-server
     user system
     group system graphics
 
-# OperaMax Service
-service OperaMaxSystem /system/bin/OperaMaxSystem
-    socket tunman stream 0666 system system
-    class main
-    disabled
-
-on property:persist.service.operamax=1
-    start OperaMaxSystem
-
-on property:persist.service.operamax=0
-    stop OperaMaxSystem
-
 service kpoc_charger /system/bin/kpoc_charger
     class charger
 
@@ -1528,7 +1358,7 @@ setprop rild.mark_switchuser 0
 #end
 
 chmod 0644 /system/lib/libzteevdo-ril.so
-chomd 0644 /system/lib/zterilPara
+chmod 0644 /system/lib/zterilPara
 chown root /system/bin/pppd
 chmod 4755 /system/bin/pppd
 chown root /system/bin/chat
@@ -1556,9 +1386,7 @@ service usbdongled /system/bin/dongled
     class main
 	user root
 	group radio cache inet misc
-	enabled
-
-
+	enable
 #
 #usbdongled(end)
 #
@@ -1584,7 +1412,6 @@ service program_binary /system/bin/program_binary_service
 
 # Lenovo wuzb1 2016-01-11 drop kvm caches interface
 on property:sys.vm.drop_caches=*
-    sync
     write /proc/sys/vm/drop_caches ${sys.vm.drop_caches}
 
 #lenovo-sw jixj 2014.1.3 add begin for customsn
